# ai-bench

./: .gitignore  LABEL_STUDIO.md  README.md  REVIEW_TOOL.md  analyze_endpoint.py  pyproject.toml  requirements.txt  sample.md  sample_answer.md  test.py
analysis_outputs/: combination_counts.csv  raw_responses.jsonl  reasoning_counts.csv  responses.csv  status_code_counts.csv
benchmark_outputs/: raw_responses.jsonl
benchmark_outputs/analysis/: overall_metrics.json  per_example_summary.csv  runs_detailed.csv
curl_request/: simple_curl.sh
data/: benchmark_results.jsonl  ground_truth.csv  review_progress.json
datasets/: comment_benchmark_ground_truth.csv
labelstudio/: comment_sense_config.xml
reports/: benchmark_failures.csv  benchmark_summary.json
scripts/: analyze_benchmark.py  analyze_benchmark_results.py  create_benchmark_dataset.py  export_labelstudio.py  import_labelstudio.py  run_benchmark.py  run_comment_benchmark.py  run_dev.sh  run_review.sh
src/comment_benchmark/: __init__.py  api.py  review.py  synth.py
ui/src/: App.css  App.jsx
