[project]
name = "comment-benchmark"
version = "0.1.0"
description = "Benchmark script for comment analysis endpoint"
authors = [{name = "Auto"}]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
]

[tool.uv]
# Enable uv to respect this project file
