[project]
name = "comment-benchmark"
version = "0.1.0"
description = "Dataset synthesis utilities for Comment Sense v2 benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-generativeai>=0.8.3",
  "matplotlib>=3.10.6",
  "pandas>=2.3.2",
  "seaborn>=0.13.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0"
]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
